--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -195,6 +195,16 @@ body::-webkit-scrollbar-thumb {
 .language_text {
     margin: 10px 0;
 }
+.skill__member {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    margin: 10px;
+}
+.skill__image {
+    height: 100%;
+    width: 100%;
+}
 .text--bold {
     font-weight: 400;
 }
@@ -429,6 +439,10 @@ body::-webkit-scrollbar-thumb {
     color: #fff;
     padding-top: 60px;
 }
+#projects__content {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+}
 #projects__text {
     font-family: 'Amatic SC','roboto', sans-serif;
     font-size: 2.5rem;
@@ -470,11 +484,12 @@ body::-webkit-scrollbar-thumb {
 .project__technology {
     display: flex;
     justify-content: center;
+    margin: 19px 0 0 0;
 }
 .technology__member {
     display: inline-block;
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     margin: 10px;
 }
 .technology__image {
@@ -492,6 +507,11 @@ body::-webkit-scrollbar-thumb {
 }
 
 /************ Project section media queries *********/
+@media (max-width: 768px) {
+    .project {
+        width: 75vw;
+    }
+}
 @media (max-width: 425px) {
     .project {
         width: 85vw;
@@ -499,6 +519,12 @@ body::-webkit-scrollbar-thumb {
     }
     .project__description {
         font-size: .9rem;
+    }
+    .technology__member {
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+        margin: 10px;
     }
 }
 /************ Project Section end ************/
