--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -503,14 +503,18 @@ body::-webkit-scrollbar-thumb {
     font-size: 1rem;
     margin: 10px;
 }
-.project__links {
-    display: flex;
-    justify-content: space-around;
+.project__technologies {
+    font-weight: 100;
+    text-align: center;
+    padding: 20px 0 20px 0;
+}
+.project__technologies__span {
+    font-weight: 400;
 }
 .project__external {
     display: flex;
     justify-content: center;
-    margin: 19px 0 0 0;
+    margin: 10px 0 0 0;
 }
 .project__button {
     display: flex;
@@ -518,6 +522,7 @@ body::-webkit-scrollbar-thumb {
     border-radius: 5px;
     padding: 5px;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 .project__github {
